--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.24.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-router": "^7.3.0"
   },
